fixed style on small screen

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -5,25 +5,25 @@ body {
 
 .AddTodo_container,
 .TodoList_container {
-  margin: 20px 20px 0px 20px;
+  margin: 40px 20px 0px 20px;
 }
 
 .AddTodo {
   width: 100%;
-  height: 50px;
-  font-size: 20pt;
+  height: 130px;
+  font-size: 50pt;
   color: #c7edee;
   box-sizing: border-box;
   border: 0;
   outline: none;
-  padding-left: 15px;
+  padding-left: 30px;
   background-color: #725387;
 }
 
 .FilterLink {
   margin-left: 20px;
   color: #9292b2;
-  font-size: 16pt;
+  font-size: 45pt;
 }
 
 .FilterLink span {
@@ -35,32 +35,36 @@ body {
   text-decoration: none;
 }
 
+.TodoItem {
+  margin: 20px 0;
+  display: flex;
+  justify-content: space-between;
+}
+
 .TodoItem_ul {
+  margin-top: 50px;
   display: flex;
   flex-direction: column-reverse;
   padding-left: 0;
   list-style: none;
-  border-top: 1px dotted #9292b2;
+  border-top: 2px solid #9292b2;
 }
 
 .TodoItem_li {
-  margin-top: 10px;
-  height: 50px;
-  border-bottom: 1px dotted #9292b2;
+  border-bottom: 2px solid #9292b2;
 }
 
-.TodoItem {
-  display: flex;
-  justify-content: space-between;
-}
 
 .ToogleTodoButton,
 .RemoveTodoButton,
 .ToggleEditButton,
 .EditTodo_button {
+  margin-top: auto;
+  margin-bottom: auto;
   outline: none;
-  height: 40px;
-  width: 40px;
+  height: 80px;
+  width: 80px;
+  font-size: 40pt;
   border: 0;
   border-radius: 100px;
   background: #9292b2;;
@@ -72,7 +76,7 @@ body {
 
 .TextTodo_active {
   margin: auto auto auto 10px;
-  font-size: 16pt;
+  font-size: 40pt;
   color: #c7edee;
   text-overflow: ellipsis;
   overflow: hidden;
@@ -81,7 +85,7 @@ body {
 
 .TextTodo_completed {
   margin: auto auto auto 10px;
-  font-size: 16pt;
+  font-size: 40pt;
   color: #9292b2;
   text-decoration: line-through;
 }
@@ -96,8 +100,9 @@ body {
 }
 
 .EditTodo_input {
+  margin: 20px 0;
   width: 100%;
-  font-size: 20pt;
+  font-size: 45pt;
   color: #c7edee;
   box-sizing: border-box;
   border: 0;
@@ -107,5 +112,5 @@ body {
 }
 
 .EditTodo_button {
-  margin-left: 10px;
+  margin: 20px 0 20px 20px;
 }
